fix spacing

--- a/assets/scss/helper/_utils.scss
+++ b/assets/scss/helper/_utils.scss
@@ -568,6 +568,9 @@
 .mb-32 {
   margin-bottom: 32px;
 }
+.mb-40 {
+  margin-bottom: 40px;
+}
 .mb-48 {
   margin-bottom: 48px;
 }
